# Reviflow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  list_openrouter_models.py
.agent/workflows/: bmad-bmad-master.agent.md  bmad-bmm-analyst.agent.md  bmad-bmm-architect.agent.md  bmad-bmm-dev.agent.md  bmad-bmm-pm.agent.md  bmad-bmm-quick-flow-solo-dev.agent.md  bmad-bmm-sm.agent.md  bmad-bmm-tea.agent.md  bmad-bmm-tech-writer-tech-writer.agent.md  bmad-bmm-ux-designer.agent.md
.github/workflows/: docker-publish.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
backend/: check_learner.py  check_scores.py  debug_db.py  debug_rel.py  fix_db_roles.py  pyproject.toml  simulate_creation.py
backend/app/: config.py  main.py
backend/app/core/: db.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/ingest/: router.py  schemas.py  service.py
backend/app/modules/quiz/: models.py  router.py  schemas.py  service.py
backend/static/: index.html
backend/static/assets/: index-C2lSBDW-.css  index-CcsouM31.js
backend/tests/: conftest.py  test_auth.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DyslexiaToggle.tsx  ThemeToggle.tsx
frontend/src/components/ui/: Modal.tsx  Skeleton.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  ParentHubPage.tsx
frontend/src/stores/: useAccessibility.ts  useAuth.ts  useTheme.ts
(+22 files in other folders)
